--- a/app/views/store/settings.html.haml
+++ b/app/views/store/settings.html.haml
@@ -24,7 +24,7 @@
     %strong 
       Page Url
   %dd 
-    = link_to @site_domain + '/' + @store.page_url ,'http://' + @site_domain + '/' + @store.page_url
+    = link_to @site_domain + '/florist/' + @store.page_url ,'http://' + @site_domain + '/florist/' + @store.page_url
 
 
 = link_to 'Edit Store Details', '/store/edit', {:class => 'uk-button uk-button-primary'}
