--- a/app/views/products/_edit_form.html.haml
+++ b/app/views/products/_edit_form.html.haml
@@ -1,4 +1,4 @@
-= form_for(@product, :html=> {:multipart => true,:class => "uk-form uk-form-stacked"},:url => {:controller => 'products',:action=>"create"}) do |f|
+= form_for(@product, :html=> {:multipart => true,:class => "uk-form uk-form-stacked"},:url => {:controller => 'products',:action=>"update"}) do |f|
   - if @product.errors.any?
     #error_explanation
     = pluralize(@product.errors.count, "error")
@@ -10,6 +10,8 @@
   .uk-form-row
     = f.label :pic, :class => "uk-form-label"    
     .uk-form-controls
+      -if @product.pic.present?
+        =image_tag @product.pic.small.url, :width => 120
       = f.file_field :pic, :class => 'uk-width-1-1' 
   .uk-form-row
     = f.label :name, :class => "uk-form-label"    
@@ -30,23 +32,23 @@
       %em
         Entise your customers, provide a good description of this item  
   .uk-form-row
-    = f.label :caegory, :class => "uk-form-label"
+    -if @product.category.present?
+      = f.label :category.to_s + ': (' + @product.category.name + ')', :class => "uk-form-label"
+    -else
+      = f.label :category.to_s, :class => "uk-form-label"
     .uk-form-controls
-      = select_tag 'store_product[product_category_id]', options_from_collection_for_select(Store::Product::Category.all, "id", "name"), {'class' => 'uk-width-2-4',:prompt => 'choose category'}
+      
+      = f.select :category, options_from_collection_for_select(Store::Product::Category.all, "id", "name"), {include_blank: t(:please_choose_a_category) }, :class => "uk-form uk-width-1-2"
+
+      
   .uk-form-row
     = f.label :price, :class => "uk-form-label"        
     .uk-form-controls
       RM
       = f.text_field :price,:type => "number", :min => "0", :max => "9999", :step => "0.10", :size => "4",:title => "CDA Currency Format - no RM sign and no comma(s) - cents (.##) are optional"                  
   .uk-form-row
-    = f.submit 'Setup My Store', :class => "uk-button uk-button-primary uk-width-1-1"
-  -#    
-    .uk-form-row
-      %label.uk-form-label{:for => "form-s-s"} Category
-      .uk-form-controls
-        %select#form-s-s
-          %option Wedding
-          %option Funeral
+    = f.submit 'save', :class => "uk-button uk-button-primary uk-width-1-1"
+  
   -#
     .uk-form-row
       %span.uk-form-label Color
