--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,7 +1,6 @@
 = render 'branch/dashboard_tabs'
 .uk-margin-top
-= render 'catalog/subnavs'
-
+= render 'catalog/subnavs', :catalog_subnav_active_menu => 'index'
 -if @products.empty?
   %h1.uk-text-center
     Ready to start selling? It's as easy as uploading your Facebook photos,or your money back!
@@ -39,15 +38,18 @@
               =product.category.name
           %td.uk-width-1-10
             =product.price
-          %td.uk-width-1-10
-            =product.status
           %td.uk-width-2-10
-            .uk-grid.uk-grid-collapse.uk-text-center
-              .uk-width-1-4
-                =link_to 'edit', '/admin/categories/' + product.id + '/edit'                              
-              .uk-width-2-4
-                =link_to 'deactivate', '/admin/categories/' + product.id + '/edit'                              
-              .uk-width-1-4
+            =product.status
+          %td.uk-width-1-10
+            .uk-grid.uk-grid-collapse.uk-text-center              
+              .uk-width-1-3
+                -#=link_to 'deactivate', '/admin/categories/' + product.id + '/edit'                              
+                =link_to '/store/' + @store.id + '/catalog/' + product.id.to_s + '/deactivate', method: :patch,:class=>'uk-button',:title => 'deactivate product' do
+                  %i.uk-icon-ban
+              .uk-width-1-3
+                =link_to '/store/' + @store.id + '/catalog/' + product.id.to_s + '/edit', method: :get,:class=>'uk-button'do
+                  %i.uk-icon-pencil                
+              .uk-width-1-3
                 - if can? :delete, Store
-                  =link_to '/store/' + @store.id + '/catalog/destroy', method: :delete, data: { confirm: 'Are you sure you want to delete this product?' }, :class=>'uk-button' do
+                  =link_to '/store/' + @store.id + '/catalog/' + product.id.to_s + '/destroy', method: :delete, data: { confirm: 'Are you sure you want to delete this product?' }, :class=>'uk-button' do
                     %i.uk-icon-trash                
