--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,6 +1,15 @@
-.uk-container-center 
-  %form.uk-form
-    .uk-grid
-      .uk-width-1-1
-        %input.uk-width-1-1.uk-form-large{:type => "text", :placeholder => "100"}
-        %div.uk-homepage-background
+ 
+%div.uk-homepage-background{:style =>"background-image: url('#{asset_path('lefiores-florist-marketplace-backdrop-01.jpg') }' ); height:450px;padding-top:100px;"}
+  .uk-container.uk-container-center
+    %form.uk-form
+      .uk-grid
+        .uk-width-1-1
+          %div.search-box-instructions
+            Type in the postal code and we'll match you up with the local florists there!
+          %input.uk-width-1-1.uk-form-large{:type => "text", :placeholder => "Type Postal Code or City Name here..."}
+        
+
+
+
+
+  
