Update remaining files in apps - - application.js - lefiores.scss - _form.html.haml - new.html.haml

--- a/app/assets/stylesheets/lefiores.scss
+++ b/app/assets/stylesheets/lefiores.scss
@@ -73,3 +73,19 @@ ul.uk-navbar-nav{
 .lefiores-subnav li a:hover {
 	background-color: transparent !important;
 }
+
+.florist-login, .florist-login h2{
+	color: #FFFFFF;	
+}
+
+.florist-features h2{
+	color: #FFFFFF;
+}
+
+.black-transparent-bg {
+	background-color: rgba(0, 0, 0, 0.7);
+	padding: 20px 20px 50px;
+	border-radius: 15px;
+	max-width: 70%;
+	margin: 0px auto;
+}
