Added new classes: uk-form-password and uk-form-password-toggle
These additions makes the "Show/Hide" toggle sits nicely inside the input field, instead of outside.

--- a/app/assets/stylesheets/lefiores.scss
+++ b/app/assets/stylesheets/lefiores.scss
@@ -41,7 +41,7 @@ table tbody tr td{
   font-weight:bold;
 }
 
-.uk-footer ul, {
+.uk-footer ul, {	
   margin: 0 0 10px 0;
   padding: 0 0 0 5px;
 }
@@ -78,7 +78,7 @@ ul.uk-navbar-nav{
 	color: #FFFFFF;	
 }
 
-.florist-features h2{
+.florist-features, .florist-features h2{
 	color: #FFFFFF;
 }
 
@@ -88,4 +88,21 @@ ul.uk-navbar-nav{
 	border-radius: 15px;
 	max-width: 70%;
 	margin: 0px auto;
+}
+
+.uk-form-password {
+	display: inline-block;
+	position: relative;
+	width: 100%;
+}
+
+.uk-form-password-toggle {
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    margin-top: -6px;
+    font-size: 13px;
+    line-height: 13px;
+    color: #999;
 }
