The 'Florist Login' link should link to the login page instead of the registration page.

--- a/app/views/layouts/_default_navbar.html.haml
+++ b/app/views/layouts/_default_navbar.html.haml
@@ -59,7 +59,7 @@
     -else
       %ul.uk-subnav.uk-subnav-pill.lefiores-subnav
         %li
-          %a{:href => "/register?type=florist"} Florist Login
+          %a{:href => "/login"} Florist Login
       
       -#
         .uk-button-group
